# FaceID

./: .gitignore  README.md  todo.txt
doc/: convert_images_to_numpy_array.py  test_linear_model_classification.py
project/app/client/: build.gradle  readme.md  start.sh
project/app/client/data/Alpha/: model
project/app/client/data/Beta/: model
project/app/client/data/Botan/: model
project/app/client/gradle/wrapper/: gradle-wrapper.properties
project/app/client/models/dl4j/: model.dl4j  model_cnn.dl4j
project/app/client/models/linear/: B. Hamon.model  (+13 more)
project/app/dataset-normalizer/: build.gradle  settings.gradle
project/app/test-linear-classification/: dataset.py  library_api.py  main.py
project/dataset/raw/alexandre/: index.jfif
project/lib/: CMakeLists.txt  library.cpp  library.h  test.cpp
project/lib/linear-model/: CMakeLists.txt  library.cpp
project/lib/multilayer-perceptron/: CMakeLists.txt  library.cpp  maths.h  multilayer-perceptron.h  test.cpp
project/lib/multilayer-perceptron/activation/: ActivationFunction.h
project/lib/multilayer-perceptron/activation/implementation/: Sigmoid.h  Softmax.h
project/lib/multilayer-perceptron/layer/: Layer.cpp  Layer.h
project/lib/multilayer-perceptron/matrix/: Matrix.cpp  Matrix.h
project/lib/multilayer-perceptron/network/: MultiLayerNetwork.cpp  MultiLayerNetwork.h
project/lib/multilayer-perceptron/network/layer/: Layer.cpp  Layer.h
project/lib/multilayer-perceptron/network/neuron/: Neuron.cpp  Neuron.h
project/lib/multilayer-perceptron/src/: library.cpp  test.cpp
project/lib/multilayer-perceptron/src/activation/: ActivationFunction.h
project/lib/multilayer-perceptron/src/activation/implementation/: Hyperbolic.h  Linear.h  Relu.h  Sigmoid.h  Softmax.h
project/lib/multilayer-perceptron/src/alglib/: optimization.h
project/lib/multilayer-perceptron/src/backend/cuda/: CudaBackend.cu  CudaBackend.h
project/lib/multilayer-perceptron/src/file/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
project/lib/multilayer-perceptron/src/initializer/: Initializer.h
project/lib/multilayer-perceptron/src/initializer/implementation/: RandomUniform.h  XavierUniform.h
project/lib/multilayer-perceptron/src/layer/: Layer.cpp  Layer.h
project/lib/multilayer-perceptron/src/matrix/: Matrix.cpp  Matrix.h
project/lib/multilayer-perceptron/src/network/: MultiLayerNetwork.cpp  MultiLayerNetwork.h
project/lib/multilayer-perceptron/src/svm/: SVM.cpp  SVM.h
project/lib/multilayer-perceptron/src/svm/kernel/: Kernel.h
project/lib/multilayer-perceptron/src/svm/kernel/implementation/: LinearKernel.h  RBFKernel.h  RadialBasisFunction.h
project/lib/multilayer-perceptron/src/svm/solver/: QuadraticSolver.h
project/lib/multilayer-perceptron/src/utils/: utils.cpp  utils.h
project/lib/multilayer-perceptron/utils/: maths.h  utils.cpp  utils.h
project/models/face-classification/: alexandre.model  botan.model  paul.model
project/tests/all_test/: cas_de_test_rendu_3.ipynb  cross_mlp.py  linear_multi_3_classes_mlp.py  linear_multiple.py  linear_simple.py  linear_simple_2d_mlp.py  linear_simple_3d_mlp.py  linear_tricky_3d_mlp.py  multi_cross_mlp.py  non_linear_simple_2d_mlp.py  non_linear_simple_3d_mlp.py  utils.py  xor_mlp.py  xor_simple_perceptron.py
project/tests/all_test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cas_de_test_rendu_3-checkpoint.ipynb
project/tests/linear-model-classification/: Notebook _ CAS DE TESTS.ipynb  camera_stream.py  face_id.py  main.py
project/tests/multi-layer-network-classification/: camera_stream.py  const.py  dataset.py  face_id.py  library_api.py  main.py
(+25 files in other folders)
